<resources>
    <string name="app_name">DataCollector</string>
    <string name="please_log_your_food">Please log your food</string>
    <string name="smallMeal">Small</string>
    <string name="normalMeal">Normal</string>
    <string name="largeMeal">Large</string>
    <string name="Q_mealsize">What mealsize did you eat?</string>
    <string name="nothing_logged">Nothing logged</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>